# zmove

./: Cargo.toml  README.md
src/: current_directory_cmd.rs  file_checker.rs  main.rs  relative_directory_cmd.rs  set_destination.rs
