[package]
name = "zmove"
version = "0.1.2"
edition = "2021"
description = "Move files in the command line with ease"
authors = ["Justin Korkie justinjkorkie@gmail.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/korkie9/zmove"
documentation = "https://github.com/korkie9/zmove"

[dependencies]


[[bin]]
name = "zmv"
path = "src/main.rs"   
